# TVUChilling

./: README.md  prd.md
.kiro/steering/: PROJECT_STRUCTURE.md  SENIOR_SOFTWARE_ENGINEER.md
ARTemplate/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ARTemplate/ProjectSettings/: ProjectSettings.asset
Assets/StreamingAssets/webview/: index.html
TVU_AR_Graduation/: .gitignore  FIX_DANCER_ANIMATION.md  FIX_IMAGE_TRACKING.md  SETUP_ARTEMPLATE_PLACEMENT.md  SETUP_AR_MODES.md
TVU_AR_Graduation/Assets/: RedMaterial.mat
TVU_AR_Graduation/Assets/AR/: CupImageLibrary.asset
TVU_AR_Graduation/Assets/Editor/: AndroidPermissionsPostprocess.cs
TVU_AR_Graduation/Assets/Prefabs/: TestCube.prefab
TVU_AR_Graduation/Assets/Resources/: PerformanceTestRunInfo.json
TVU_AR_Graduation/Assets/Scenes/: ARTestScene.unity
TVU_AR_Graduation/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
TVU_AR_Graduation/native-video-encoder/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt
TVU_AR_Graduation/native-video-encoder/include/: video_encoder.h
TVU_AR_Graduation/native-video-encoder/src/: jni_bridge.cpp  video_encoder.cpp
docs/: FIX_GRADLE_MLKIT.md  ML_KIT_SETUP.md  REACT_SETUP_SUMMARY.md  REACT_WEBVIEW_GUIDE.md  SETUP_GUIDE.md  SPRINT2_SUMMARY.md  UI_TOOLKIT_GUIDE.md  UNITY_SCENE_SETUP.md
tasks/: README.md  phase0-foundation.md  phase1-sprint1.md  phase1-sprint2.md  phase1-sprint3.md  phase2-sprint4.md  phase2-sprint5.md  phase2-sprint6.md
webview-ui/: package-lock.json  package.json  vite.config.ts
webview-ui/src/: App.tsx  index.css
(+91 files in other folders)
